--- a/views/head.ejs
+++ b/views/head.ejs
@@ -11,3 +11,4 @@
 <script type="text/javascript" src="javascripts/scripts.js"></script>
 <link rel="icon" href="/images/sm-sb-logo.png">
 <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
