update styles upload photo

--- a/views/volunteer-pic-upload.ejs
+++ b/views/volunteer-pic-upload.ejs
@@ -5,7 +5,7 @@
 	<% include user-head %>
 </head>
 <body class="vol-upload-body">
-	<button class="btn btn-primary back-button-upload" onclick="goBack()">Go Back</button>
+	<button class="btn btn-primary back-button-upload" onclick="goBack()">Back</button>
 
 <script>
 function goBack() {
