update home svg, add contact img

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -91,7 +91,7 @@
 				<img src="./images/icons/phone.svg"/><span> Call us: <a href="#">123-456-7890</a></span>
 			</span>
 			<span class="center">
-				<img src="./images/icons/location.svg"/><span> Operational Headquarters: <a href="#"> 1234 Street Dr. NW City, State 56789</a></span>
+				<img src="./images/icons/location.svg"/><span> Visit us: <a href="#"> 1234 Street Dr. NW City, State 56789</a></span>
 			</span></br>
 		</div>
 
