--- a/views/user-login.ejs
+++ b/views/user-login.ejs
@@ -39,7 +39,7 @@
 
 			</form>
 			<div class="">
-				<img id="home" src="./images/icons/home.svg"/><a href="/"><img class="return-home" src="/images/sb-lettering_dimgray.png" height="40" width="150"/></a>
+				<img id="home" src="/images/icons/home.svg"/><a href="/"><img class="return-home" src="/images/sb-lettering_dimgray.png" height="40" width="150"/></a>
 			</div>	
 		</div>
 	</div>
