--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
       			<a href="/"><img class="logo" src="./images/sm-sb-logo.png" height="50" width="70" /></a>
         		<img class="sp" src="./images/sb-lettering_white.png" height="50" width="170"/>
       			<div class="login">
-			        <button class="btn btn-info family-login login-button raised">Family Login</button>
+			        <button class="btn btn-info family-login login-button raised" data-cy="familyLogin">Family Login</button>
 			        <button class="btn btn-info volunteer-login login-button">Volunteer Login</button>
         		</div>
     		</div>
