--- a/views/user-login.ejs
+++ b/views/user-login.ejs
@@ -21,16 +21,16 @@
 				<h2 class="volunteer-header row text-center mobile-font-boost">Member Login</h2>
 				<div class="login-wrapper">
 					<div class="email-error error"></div>
-					<label class="mobile-font-boost">Email</label><input name="email" type="email" class="email mobile-font-boost" placeholder="Your Email" required>
+					<label class="mobile-font-boost">Email</label><input name="email" type="email" class="email mobile-font-boost" placeholder="Your Email"  data-cy="userEmail" required>
 				</div>
 
 				<div class="login-wrapper">
-					<label class="password-input mobile-font-boost">Password</label><input name="password" type="password" class="password mobile-font-boost" placeholder="Your password" required>
+					<label class="password-input mobile-font-boost">Password</label><input name="password" type="password" class="password mobile-font-boost" data-cy="userPass"placeholder="Your password" required>
 					<div class="password-error error"></div>
 				</div>
 				
 				<div class="login-wrapper youth-login row col-sm-4">
-					<input type="submit" class="submit btn btn-warning" value="Login">
+					<input type="submit" class="submit btn btn-warning" value="Login" data-cy="userSubmit">
 				</div>
 
 				<div class="login-wrapper not-a-member col-sm-4 mobile-font-boost"><label>Not a member?</label>
