add vol login good/bad email

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
         		<img class="sp" src="./images/sb-lettering_white.png" height="50" width="170"/>
       			<div class="login">
 			        <button class="btn btn-info family-login login-button raised" data-cy="familyLogin">Family Login</button>
-			        <button class="btn btn-info volunteer-login login-button">Volunteer Login</button>
+			        <button class="btn btn-info volunteer-login login-button" data-cy="volLogin">Volunteer Login</button>
         		</div>
     		</div>
 
