--- a/views/volunteer-login.ejs
+++ b/views/volunteer-login.ejs
@@ -23,18 +23,18 @@
 				
 				<div class="login-wrapper">
 					<div class="email-error error"></div>
-					<label class="mobile-font-boost">Email</label><input name="email" type="email" class="email mobile-font-boost" placeholder="Your Email" required>
+					<label class="mobile-font-boost">Email</label><input name="email" type="email" class="email mobile-font-boost" placeholder="Your Email" data-cy="volEmail"required>
 				</div>
 
 				<div class="login-wrapper">
-					<label class="password-input mobile-font-boost">Password</label><input name="password" type="password" class="password mobile-font-boost" placeholder="Your password" required>
+					<label class="password-input mobile-font-boost">Password</label><input name="password" type="password" class="password mobile-font-boost" placeholder="Your password" data-cy="volPass"required>
 					<div class="password-error error"></div>
 				</div>
 				<!-- <div>
 					<a href="login-Goog">Login with Google!</a>
 				</div> -->
 				<div class="login-wrapper login row col-sm-6 mobile-form">
-						<input type="submit" class="submit btn btn-warning" value="Login">
+						<input type="submit" class="submit btn btn-warning" value="Login" data-cy="volSubmit">
 					</div>
 				
 				<div class="login-wrapper mobile-form not-a-member col-sm-4 mobile-form"><label class="mobile-font-boost">Not a volunteer?</label>
